[FE] Fixed icons css alignment.

--- a/frontend/src/layout/components/sidebar/sidebar.component.css
+++ b/frontend/src/layout/components/sidebar/sidebar.component.css
@@ -113,3 +113,7 @@
     margin-bottom: 0;
     padding: 10px 0 10px 0;
 }
+
+:host /deep/ i {
+    vertical-align: baseline;
+}
