--- a/frontend/src/news/components/news-list/news-list.component.css
+++ b/frontend/src/news/components/news-list/news-list.component.css
@@ -129,7 +129,6 @@
 
 :host /deep/ .news-item-info-container span.badge {
     display: block;
-    cursor: pointer;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
