--- a/frontend/src/news/components/news-page/news-page.component.css
+++ b/frontend/src/news/components/news-page/news-page.component.css
@@ -10,6 +10,7 @@
 
 :host /deep/ .sidebar-toggler-container i {
     color: white;
+    vertical-align: baseline;
 }
 
 :host /deep/ .card-block {
