--- a/frontend/src/shared/components/search/search.component.css
+++ b/frontend/src/shared/components/search/search.component.css
@@ -5,3 +5,7 @@
 :host /deep/ button {
     cursor: pointer;
 }
+
+:host /deep/ i {
+    vertical-align: baseline;
+}
